objects/JBCXM__AssociatedRecord__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AOParticipantId__c</fullName>
        <label>Outreach Participant Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CSTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSTask</label>
        <referenceTo>JBCXM__CSTask__c</referenceTo>
        <relationshipLabel>AssociatedRecords</relationshipLabel>
        <relationshipName>AssociatedRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call To Action</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipLabel>AssociatedRecords</relationshipLabel>
        <relationshipName>AssociatedRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AssociatedRecords</relationshipLabel>
        <relationshipName>AssociatedRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OutreachId__c</fullName>
        <label>Outreach Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AssociatedRecord</label>
    <nameField>
        <label>AssociatedRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssociatedRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>